--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "prisma:seed": "tsx prisma/seed.ts",
     "db:push": "prisma db push"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^6.19.2",
