--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.0",
+    "isomorphic-dompurify": "^3.0.0-rc.2",
     "lucide-react": "^0.511.0",
     "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "rate-limiter-flexible": "^9.1.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "tailwind-merge": "^3.4.0",
