--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
+    "type": "commonjs",
     "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
@@ -11,13 +12,16 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio",
     "prisma:seed": "tsx prisma/seed.ts",
-    "db:push": "prisma db push"
+    "db:push": "prisma db push",
+    "test": "jest"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@babel/plugin-transform-runtime": "^7.29.0",
+    "@babel/preset-env": "^7.29.0",
     "@prisma/client": "^6.19.2",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
@@ -26,6 +30,8 @@
     "lucide-react": "^0.511.0",
     "next": "^16.1.6",
     "next-auth": "^5.0.0-beta.30",
+    "otplib": "^13.3.0",
+    "qrcode": "^1.5.4",
     "rate-limiter-flexible": "^9.1.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
@@ -34,14 +40,18 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^30.0.0",
     "@types/node": "^25.2.3",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^19.2.14",
     "autoprefixer": "^10.4.24",
     "eslint": "^9.39.2",
     "eslint-config-next": "^16.1.6",
+    "jest": "^30.2.0",
     "postcss": "^8.5.6",
     "prisma": "^6.19.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.4.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
